[gd_scene load_steps=5 format=3 uid="uid://cf3ytmgwd434w"]

[ext_resource type="Script" uid="uid://bstvik02v4me8" path="res://Scripts/UI/PauseScreen.gd" id="1_qmmm4"]
[ext_resource type="PackedScene" uid="uid://750jspop8us0" path="res://Prefabs/UI/CharacterShowingContainer.tscn" id="2_qgdva"]
[ext_resource type="PackedScene" uid="uid://c0shcn412sqvw" path="res://Prefabs/UI/TeamSizeUI.tscn" id="3_ydsgm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgdva"]
bg_color = Color(0, 0.130237, 0.264174, 1)

[node name="PauseScreen" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(1152, 648)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qgdva")
script = ExtResource("1_qmmm4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -102.5
offset_right = 79.5
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="CharacterSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CHARACTER SELECT"

[node name="CharacterShowingContainer" parent="." instance=ExtResource("2_qgdva")]
layout_mode = 0
offset_left = 78.0
offset_top = 105.0
offset_right = 163.0
offset_bottom = 543.0

[node name="TeamSizeUI" parent="." instance=ExtResource("3_ydsgm")]
layout_mode = 0
offset_left = 85.0
offset_top = 56.0
offset_right = 154.0
offset_bottom = 96.0

[connection signal="button_up" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="VBoxContainer/CharacterSelect" to="." method="_on_character_select_button_up"]
